@@ -1,4 +1,5 @@
 Developement
+	Support the qtnext parameter
 	Rework code to work better with xulrunner 1.9.2
 	Use preferred player in all launch cases
 	Add support for VLC plugin emulation
